feat: Jira 프로젝트 설정 내보내기 스크립트 추가
- export_jira_space_settings.py 추가 (커스텀 필드, 상태값 조회)
- main.py를 export_jira_tickets.py로 이름 변경
- 환경 변수 기반 설정, TypedDict 타입 정의, 에러 처리 적용
- JIRA_PROJECT_KEY 환경 변수 추가

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 JIRA_DOMAIN=https://your-domain.atlassian.net
 JIRA_EMAIL=your-email@example.com
 JIRA_API_TOKEN=your-jira-api-token
+JIRA_PROJECT_KEY=YOUR_PROJECT_KEY
